Added a react app with some functionality